<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosVehiculo">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="35dp"
        android:text="@string/dato_Vehiculo"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="330dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tipoVehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo" />

            <Spinner
                android:id="@+id/selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/placaCarro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/placaVehiculo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/modelo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/marca"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/color"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/cupos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cupos"
                android:inputType="textPersonName" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="28dp"
        android:onClick="continuar"
        android:text="@string/continuar" />

    <ImageView
        android:id="@+id/tarjetaPropiedad"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="106dp"
        android:onClick="seleccionTP"
        app:srcCompat="@drawable/camara" />

    <ImageView
        android:id="@+id/fotoVehiculo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="110dp"
        android:onClick="seleccionFotoVehiculo"
        app:srcCompat="@drawable/camara" />
</RelativeLayout>